// Core definitions for NewsServer protos.

import "google/protobuf/descriptor.proto";

option java_package = "com.janknspank.proto";

// For legacy reasons, these default to true. However, as of version 2.3.0
// (January 2010), it is considered preferable for RPC implementations to
// provide code generator plugins to generate code more specific to each
// system, rather than rely on the "abstract" services.
option cc_generic_services = false;
option java_generic_services = false;
option py_generic_services = false;

enum Required {
  // This field must be set for its parent message to be valid.
  YES = 1;

  // This field is optional.
  NO = 2;
};

enum StorageMethod {
  // Default: Just throw this field into an opaque unindexed blob that will
  // be deserialized once we read it on the Java side.
  BLOB = 1;

  // Use this field as the primary key.
  PRIMARY_KEY = 2;

  // Pull out this field into its own row and put an index on it.
  INDEX = 3;

  // Pull out this field into its own row and put an unique index on it (that
  // is, all values in this column will be unique).
  UNIQUE_INDEX = 4;

  // Pull out this field into its own row in the MySQL schema, but do not
  // index it.
  PULL_OUT = 5;
};

enum ClientSerialization {
  // Include this field in responses to the client, serialized with default
  // handling.
  INCLUDE = 1;

  // Include this field in responses to the client, serializing it as a
  // number even if precision / bits may be lost.
  INCLUDE_AS_NUMBER = 2;

  // Do not include this field in responses to the client.
  EXCLUDE = 3;
};

extend google.protobuf.FieldOptions {
  optional Required required = 60001 [default = NO];
  optional StorageMethod storage_method = 60002 [default = BLOB];
  optional int32 string_length = 60003 [default = -1];
  optional ClientSerialization client_serialization = 60004 [default = INCLUDE];
}

message Article {
  optional string id = 1 [
    (required) = YES,
    (storage_method) = PRIMARY_KEY,
    (string_length) = 24
  ];

  optional string url = 2 [
    (required) = YES,
    (string_length) = 767
  ];

  optional string title = 3 [
    (required) = YES,
    (string_length) = 256
  ];

  optional string type = 4 [
    (string_length) = 24
  ];

  optional string author = 5 [
    (string_length) = 256
  ];

  optional string copyright = 6 [
    (string_length) = 256
  ];

  optional string description = 7 [
    (required) = YES,
    (string_length) = 767
  ];

  optional string image_url = 8 [
    (string_length) = 767
  ];

  optional string article_body = 9 [
    (required) = YES,
    (client_serialization) = EXCLUDE,
    (string_length) = 102400
  ];

  optional int64 published_time = 10 [
    (required) = YES,
    (storage_method) = INDEX
  ];

  optional int64 modified_time = 11;
}

message Link {
  optional string origin_id = 1 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 24
  ];

  optional string destination_id = 2 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 24
  ];

  optional int64 discovery_time = 3 [
    (required) = YES
  ];

  optional int64 last_found_time = 4 [
    (required) = YES
  ];
}

message Url {
  optional string url = 1 [
    (required) = YES,
    (storage_method) = PRIMARY_KEY,
    (string_length) = 767
  ];

  optional string id = 2 [
    (required) = YES,
    (storage_method) = UNIQUE_INDEX,
    (string_length) = 24
  ];

  optional int64 tweet_count = 3 [
    (required) = YES
  ];

  optional int64 discovery_time = 4 [
    (required) = YES
  ];

  optional int64 last_crawl_time = 5 [
    (storage_method) = INDEX
  ];
}
